top logo: index and contact
mudança no logo do topo, informações de contato adicionadas ao footer e novos ícones de recrutamento.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-0 pe-5"
     >
       <a href="index.html" class="navbar-brand ps-5 me-0">
-        <h1 class="text-white m-0">MOUNT</h1>
+        <h1 class="text-white m-0"><img src="img/bordado.png" width="130px" alt=""></h1>
       </a>
       <button
         type="button"
@@ -89,9 +89,9 @@
               <div class="container">
                 <div class="row justify-content-center">
                   <div class="col-lg-10 text-start">
-                    <h1 class="display-1 text-white mb-5 animated slideInRight"><img src="img/bordado.png" alt="" height="1000%">
+                    <h1 id="titulo" class="display-1 text-white mb-5 animated slideInRight">MOUNT
                     </h1>
-                    
+                    <p>CONSTRUÇÃO & ENGENHARIA</p>
                   </div>
                 </div>
               </div>
@@ -491,7 +491,7 @@
                 src="img/soldador.jpg"
               />
               <div class="btn-square bg-primary rounded-circle">
-                <i class="fa fa-quote-left text-white"></i>
+                <i class="fa fa-fire-extinguisher text-white"></i>
               </div>
             </div>
             <div class="testimonial-text text-center rounded p-4">
@@ -511,7 +511,7 @@
                 src="img/pedreiro.jpeg"
               />
               <div class="btn-square bg-primary rounded-circle">
-                <i class="fa fa-quote-left text-white"></i>
+                <i class="fa fa-home text-white" ></i>
               </div>
             </div>
             <div class="testimonial-text text-center rounded p-4">
@@ -531,7 +531,7 @@
                 src="img/marceneiro.jpg"
               />
               <div class="btn-square bg-primary rounded-circle">
-                <i class="fa fa-quote-left text-white"></i>
+                <i class="fa fa-map-signs text-white"></i>
               </div>
             </div>
             <div class="testimonial-text text-center rounded p-4">
@@ -562,10 +562,11 @@
               <i class="fa fa-map-marker-alt me-3"></i>R. José Balbino Chaves, 235 - São Sebastião, Conselheiro Lafaiete - MG, 36406-036
             </p>
             <p class="mb-2">
-              <i class="fa fa-phone-alt me-3"></i>+012 345 67890
+              <i class="fa fa-phone-alt me-3"></i>+55 (31) 98472-7977
+
             </p>
             <p class="mb-2">
-              <i class="fa fa-envelope me-3"></i>info@example.com
+              <i class="fa fa-envelope me-3"></i>contato@mount.com
             </p>
           </div>
           <div class="col-lg-3 col-md-6">
