--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-0 pe-5">
         <a href="index.html" class="navbar-brand ps-5 me-0">
-            <h1 class="text-white m-0">MOUNT</h1>
-        </a>
+            <h1 class="text-white m-0"><img src="img/bordado.png" width="120px" alt=""></h1>
+          </a>
         <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
