--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-0 pe-5"
     >
       <a href="index.html" class="navbar-brand ps-5 me-0">
-        <h1 class="text-white m-0"><img src="img/bordado.png" width="130px" alt=""></h1>
+        <h1 class="text-white m-0"><img src="img/bordado.png" width="120px" alt=""></h1>
       </a>
       <button
         type="button"
@@ -78,13 +78,13 @@
       </div>
     </nav>
     <!-- Navbar End -->
-
+    
     <!-- Carousel Start -->
     <div class="container-fluid px-0 mb-5">
       <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="w-100" src="img/sobre2.jpg" alt="Image" width="700px" />
+            <img class="w-100" src="img/cover1.jpg" alt="Image" width="700px" />
             <div class="carousel-caption">
               <div class="container">
                 <div class="row justify-content-center">
@@ -146,6 +146,15 @@
             <span class="fs-5 fw-semi-bold text-white">Anos de Experiência</span>
           </div>
         </div>
+        <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
+          <div class="text-center border p-5">
+            <i class="fa fa-check-double fa-3x text-white mb-3"></i>
+            <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">
+              200
+            </h1>
+            <span class="fs-5 fw-semi-bold text-white">Projetos Finalizados</span>
+          </div>
+        </div>
         <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.3s">
           <div class="text-center border p-5">
             <i class="fa fa-users-cog fa-3x text-white mb-3"></i>
@@ -162,15 +171,6 @@
               100
             </h1>
             <span class="fs-5 fw-semi-bold text-white">Clientes Satisfeitos</span>
-          </div>
-        </div>
-        <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
-          <div class="text-center border p-5">
-            <i class="fa fa-check-double fa-3x text-white mb-3"></i>
-            <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">
-              100
-            </h1>
-            <span class="fs-5 fw-semi-bold text-white">Projetos Finalizados</span>
           </div>
         </div>
       </div>
@@ -491,7 +491,7 @@
                 src="img/soldador.jpg"
               />
               <div class="btn-square bg-primary rounded-circle">
-                <i class="fa fa-fire-extinguisher text-white"></i>
+                <img src="img/torch.png" alt="image">
               </div>
             </div>
             <div class="testimonial-text text-center rounded p-4">
@@ -511,7 +511,7 @@
                 src="img/pedreiro.jpeg"
               />
               <div class="btn-square bg-primary rounded-circle">
-                <i class="fa fa-home text-white" ></i>
+                <img src="img/masonry.png" alt="image">
               </div>
             </div>
             <div class="testimonial-text text-center rounded p-4">
@@ -531,7 +531,7 @@
                 src="img/marceneiro.jpg"
               />
               <div class="btn-square bg-primary rounded-circle">
-                <i class="fa fa-map-signs text-white"></i>
+                <img src="img/floor.png" alt="image">
               </div>
             </div>
             <div class="testimonial-text text-center rounded p-4">
