icon and links changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta content="" name="description" />
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon" />
+    <link href="img/icon.png" rel="icon" />
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -58,7 +58,9 @@
       class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-0 pe-5"
     >
       <a href="index.html" class="navbar-brand ps-5 me-0">
-        <h1 class="text-white m-0"><img src="img/bordado.png" width="120px" alt=""></h1>
+        <h1 class="text-white m-0">
+          <img src="img/bordado.png" width="120px" alt="" />
+        </h1>
       </a>
       <button
         type="button"
@@ -78,7 +80,22 @@
       </div>
     </nav>
     <!-- Navbar End -->
-    
+
+    <!-- whatsapp icon start -->
+
+    <div class="whatsapp">
+      <a
+        href="https://api.whatsapp.com/send?phone=
+        5531984727977&amp;text=Olá!%20Gostaria%20de%20solicitar%20um%20serviço%20da%20Mount"
+        class="wpp-icon"
+        target="_blank"
+      >
+        <i class="fab fa-whatsapp"></i>
+      </a>
+    </div>
+
+    <!-- whatsapp icon end -->
+
     <!-- Carousel Start -->
     <div class="container-fluid px-0 mb-5">
       <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
@@ -89,9 +106,13 @@
               <div class="container">
                 <div class="row justify-content-center">
                   <div class="col-lg-10 text-start">
-                    <h1 id="titulo" class="display-1 text-white mb-5 animated slideInRight">MOUNT
+                    <h1 class="display-1 text-white mb-5 animated slideInRight">
+                      Soluções em Engenharia Civil
                     </h1>
-                    <p>CONSTRUÇÃO & ENGENHARIA</p>
+                    <h5>
+                      Projetos de Construção, Execução, Administração de Obras,
+                      Regularização, Laudos e Consultoria
+                    </h5>
                   </div>
                 </div>
               </div>
@@ -103,9 +124,13 @@
               <div class="container">
                 <div class="row justify-content-center">
                   <div class="col-lg-10 text-start">
-                      <h1 class="display-1 text-white mb-5 animated slideInRight">
-                          Soluções em Engenharia Civil
-                        </h1>
+                    <h1 class="display-1 text-white mb-5 animated slideInRight">
+                      Serviço de Qualidade
+                    </h1>
+                    <h5>
+                      Garantimos adequação às normas vigentes e satisfação a
+                      nossos clientes
+                    </h5>
                   </div>
                 </div>
               </div>
@@ -143,7 +168,9 @@
             <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">
               25
             </h1>
-            <span class="fs-5 fw-semi-bold text-white">Anos de Experiência</span>
+            <span class="fs-5 fw-semi-bold text-white"
+              >Anos de Experiência</span
+            >
           </div>
         </div>
         <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
@@ -152,7 +179,9 @@
             <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">
               200
             </h1>
-            <span class="fs-5 fw-semi-bold text-white">Projetos Finalizados</span>
+            <span class="fs-5 fw-semi-bold text-white"
+              >Projetos Finalizados</span
+            >
           </div>
         </div>
         <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.3s">
@@ -170,7 +199,9 @@
             <h1 class="display-2 text-primary mb-0" data-toggle="counter-up">
               100
             </h1>
-            <span class="fs-5 fw-semi-bold text-white">Clientes Satisfeitos</span>
+            <span class="fs-5 fw-semi-bold text-white"
+              >Clientes Satisfeitos</span
+            >
           </div>
         </div>
       </div>
@@ -201,7 +232,12 @@
             <p class="fw-medium text-uppercase text-primary mb-2">Sobre Nós</p>
             <h1 class="display-5 mb-4">Somos Consolidados no Mercado</h1>
             <p class="mb-4">
-              Os anos de atuação no ramo da engenharia nos tornaram especialistas em nosso setor. Enfrentamos inúmeros desafios, tornando-nos resilientes às mudanças do mercado e às demandas dos clientes. Essa bagagem de experiência é a base sólida que sustenta nossa reputação e nos impulsiona a continuar inovando e entregando soluções adequadas e de alta qualidade aos nossos parceiros e clientes.
+              A Mount atua há anos no ramo da engenharia civil e possui
+              profissionais especialistas no setor. Tamanha experiência e
+              qualificação nos permite destrinchar cada trabalho com maestria,
+              atendendo às exigências das normas e dos clientes. Nosso histórico
+              sustenta nossa reputação e nos impulsiona a continuar inovando e
+              entregando soluções adequadas e de altíssima qualidade.
             </p>
             <div class="d-flex align-items-center mb-4">
               <div class="flex-shrink-0 bg-primary p-4">
@@ -211,20 +247,18 @@
               </div>
               <div class="ms-4">
                 <p>
-                  <i class="fa fa-check text-primary me-2"></i>Projetos de Construção
+                  <i class="fa fa-check text-primary me-2"></i>Projetos de
+                  Construção
                 </p>
+                <p><i class="fa fa-check text-primary me-2"></i>Execução</p>
                 <p>
-                  <i class="fa fa-check text-primary me-2"></i>Execução
+                  <i class="fa fa-check text-primary me-2"></i>Administração de
+                  Obras
                 </p>
-                <p>
-                    <i class="fa fa-check text-primary me-2"></i>Administração de Obras
-                  </p>
                 <p>
                   <i class="fa fa-check text-primary me-2"></i>Regularização
                 </p>
-                <p>
-                  <i class="fa fa-check text-primary me-2"></i>Laudos
-                </p>
+                <p><i class="fa fa-check text-primary me-2"></i>Laudos</p>
                 <p class="mb-0">
                   <i class="fa fa-check text-primary me-2"></i>Consultoria
                 </p>
@@ -249,11 +283,20 @@
                   <div
                     class="flex-shrink-0 btn-lg-square rounded-circle bg-primary"
                   >
-                    <i class="fa fa-phone-alt text-white"></i>
+                    <a
+                      href="https://api.whatsapp.com/send?phone=
+                    5531984727977&amp;text=Olá!%20Gostaria%20de%20solicitar%20um%20serviço%20da%20Mount"
+                      target="_blank"
+                      ><i class="fa fa-phone-alt text-white"></i
+                    ></a>
                   </div>
                   <div class="ms-3">
                     <p class="mb-2">WhatsApp</p>
-                    <h5 class="mb-0">+55 (31) 98472-7977</h5>
+                    <a
+                      href="https://api.whatsapp.com/send?phone=
+                    5531984727977&amp;text=Olá!%20Gostaria%20de%20solicitar%20um%20serviço%20da%20Mount"
+                      target="_blank"
+                      id="wppabout"><h5 class="mb-0">+55 (31) 98472-7977</h5></a>
                   </div>
                 </div>
               </div>
@@ -272,7 +315,9 @@
           data-wow-delay="0.1s"
           style="max-width: 600px"
         >
-          <p class="fw-medium text-uppercase text-primary mb-2">Nossos Serviços</p>
+          <p class="fw-medium text-uppercase text-primary mb-2">
+            Nossos Serviços
+          </p>
           <h1 class="display-5 mb-4">Providenciamos Serviços de Qualidade</h1>
         </div>
         <div class="row gy-5 gx-4">
@@ -413,6 +458,81 @@
     </div>
     <!-- Service End -->
 
+     <!-- Testimonial Start -->
+     <div class="container-xxl py-5">
+      <div class="container">
+        <div
+          class="text-center mx-auto wow fadeInUp"
+          data-wow-delay="0.1s"
+          style="max-width: 600px"
+        >
+          <p class="fw-medium text-uppercase text-primary mb-2">Recrutamento</p>
+          <h1 class="display-5 mb-5">Colabore Conosco</h1>
+        </div>
+        <div
+          class="owl-carousel testimonial-carousel wow fadeInUp"
+          data-wow-delay="0.1s"
+        >
+          <div class="testimonial-item text-center">
+            <div class="testimonial-img position-relative">
+              <img
+                class="img-fluid rounded-circle mx-auto mb-5"
+                src="img/soldador.jpg"
+              />
+              <div class="btn-square bg-primary rounded-circle">
+                <img src="img/torch.png" alt="image" />
+              </div>
+            </div>
+            <div class="testimonial-text text-center rounded p-4">
+              <h5 class="mb-1">Soldador</h5>
+              <p>
+                Vaga de Emprego. Soldador com Experiência. Disponibilidade das 07h às 17h. Entrar em contato pelo WhatsApp <a
+                href="https://api.whatsapp.com/send?phone=
+              5531984727977&amp;text=Olá!%20Gostaria%20de%20solicitar%20um%20serviço%20da%20Mount"
+                target="_blank"
+                id="wppfooter"><font color="#14BC8A">+55 (31) 98472-7977</font></a>
+              </p>
+            </div>
+          </div>
+          <div class="testimonial-item text-center">
+            <div class="testimonial-img position-relative">
+              <img
+                class="img-fluid rounded-circle mx-auto mb-5"
+                src="img/pedreiro.jpeg"
+              />
+              <div class="btn-square bg-primary rounded-circle">
+                <img src="img/masonry.png" alt="image" />
+              </div>
+            </div>
+            <div class="testimonial-text text-center rounded p-4">
+              <h5 class="mb-1">Pedreiro</h5>
+              <p>
+                Vagas Indisponíveis
+              </p>
+            </div>
+          </div>
+          <div class="testimonial-item text-center">
+            <div class="testimonial-img position-relative">
+              <img
+                class="img-fluid rounded-circle mx-auto mb-5"
+                src="img/marceneiro.jpg"
+              />
+              <div class="btn-square bg-primary rounded-circle">
+                <img src="img/floor.png" alt="image" />
+              </div>
+            </div>
+            <div class="testimonial-text text-center rounded p-4">
+              <h5 class="mb-1">Marceneiro</h5>
+              <p>
+                Vagas Indisponíveis
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Testimonial End -->
+
     <!-- Project Start -->
     <div id="portfolio" class="container-fluid bg-dark pt-5 my-5 px-0">
       <div
@@ -420,7 +540,9 @@
         data-wow-delay="0.1s"
         style="max-width: 600px"
       >
-        <p class="fw-medium text-uppercase text-primary mb-2">Nosso Portfólio</p>
+        <p class="fw-medium text-uppercase text-primary mb-2">
+          Nosso Portfólio
+        </p>
         <h1 class="display-5 text-white mb-5">
           Galeria de Clientes e Projetos
         </h1>
@@ -469,85 +591,6 @@
     </div>
     <!-- Project End -->
 
-    <!-- Testimonial Start -->
-    <div class="container-xxl py-5">
-      <div class="container">
-        <div
-          class="text-center mx-auto wow fadeInUp"
-          data-wow-delay="0.1s"
-          style="max-width: 600px"
-        >
-          <p class="fw-medium text-uppercase text-primary mb-2">Recrutamento</p>
-          <h1 class="display-5 mb-5">Colabore Conosco</h1>
-        </div>
-        <div
-          class="owl-carousel testimonial-carousel wow fadeInUp"
-          data-wow-delay="0.1s"
-        >
-          <div class="testimonial-item text-center">
-            <div class="testimonial-img position-relative">
-              <img
-                class="img-fluid rounded-circle mx-auto mb-5"
-                src="img/soldador.jpg"
-              />
-              <div class="btn-square bg-primary rounded-circle">
-                <img src="img/torch.png" alt="image">
-              </div>
-            </div>
-            <div class="testimonial-text text-center rounded p-4">
-              <h5 class="mb-1">Soldador</h5>
-              <p>
-                Clita clita tempor justo dolor ipsum amet kasd amet duo justo
-                duo duo labore sed sed. Magna ut diam sit et amet stet eos sed
-                clita erat magna elitr erat sit sit erat at rebum justo sea
-                clita.
-              </p>
-            </div>
-          </div>
-          <div class="testimonial-item text-center">
-            <div class="testimonial-img position-relative">
-              <img
-                class="img-fluid rounded-circle mx-auto mb-5"
-                src="img/pedreiro.jpeg"
-              />
-              <div class="btn-square bg-primary rounded-circle">
-                <img src="img/masonry.png" alt="image">
-              </div>
-            </div>
-            <div class="testimonial-text text-center rounded p-4">
-              <h5 class="mb-1">Pedreiro</h5>
-              <p>
-                Clita clita tempor justo dolor ipsum amet kasd amet duo justo
-                duo duo labore sed sed. Magna ut diam sit et amet stet eos sed
-                clita erat magna elitr erat sit sit erat at rebum justo sea
-                clita.
-              </p>
-            </div>
-          </div>
-          <div class="testimonial-item text-center">
-            <div class="testimonial-img position-relative">
-              <img
-                class="img-fluid rounded-circle mx-auto mb-5"
-                src="img/marceneiro.jpg"
-              />
-              <div class="btn-square bg-primary rounded-circle">
-                <img src="img/floor.png" alt="image">
-              </div>
-            </div>
-            <div class="testimonial-text text-center rounded p-4">
-              <h5 class="mb-1">Marceneiro</h5>
-              <p>
-                Clita clita tempor justo dolor ipsum amet kasd amet duo justo
-                duo duo labore sed sed. Magna ut diam sit et amet stet eos sed
-                clita erat magna elitr erat sit sit erat at rebum justo sea
-                clita.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Testimonial End -->
 
     <!-- Footer Start -->
     <div
@@ -559,12 +602,17 @@
           <div class="col-lg-3 col-md-6">
             <h5 class="text-white mb-4">Nosso Escritório</h5>
             <p class="mb-2">
-              <i class="fa fa-map-marker-alt me-3"></i>R. José Balbino Chaves, 235 - São Sebastião, Conselheiro Lafaiete - MG, 36406-036
+              <i class="fa fa-map-marker-alt me-3"></i>R. José Balbino Chaves,
+              235 - São Sebastião, Conselheiro Lafaiete - MG, 36406-036
             </p>
             <p class="mb-2">
-              <i class="fa fa-phone-alt me-3"></i>+55 (31) 98472-7977
-
-            </p>
+              <i class="fa fa-phone-alt me-3"></i><a
+                      href="https://api.whatsapp.com/send?phone=
+                    5531984727977&amp;text=Olá!%20Gostaria%20de%20solicitar%20um%20serviço%20da%20Mount"
+                      target="_blank"
+                      id="wppfooter">+55 (31) 98472-7977
+                    </p></a>
+              
             <p class="mb-2">
               <i class="fa fa-envelope me-3"></i>contato@mount.com
             </p>
@@ -599,13 +647,6 @@
       </div>
     </div>
     <!-- Copyright End -->
-
-    <!-- Back to Top -->
-    <a
-      href="#"
-      class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"
-      ><i class="bi bi-arrow-up"></i
-    ></a>
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
